# mkdocs-torillic

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  docs.yml
docs/: index.html
docs/bandits/: index.html
docs/bandits/Bandit/: index.html
docs/bandits/bandit_captain/: index.html
docs/css/: torillic.css
docs/dragon/: index.html
docs/dragon/Cultist/: index.html
docs/dragon/Kobold/: index.html
docs/dragon/adult_blue_dragon/: index.html
docs_src/: index.md
docs_src/bandits/: Bandit.md  bandit_captain.md  index.md
docs_src/dragon/: Cultist.md  Kobold.md  adult_blue_dragon.md  index.md
mkdocs_torillic/: main.html  mkdocs_theme.yml
mkdocs_torillic/css/: spoiler.css  statblock.css  torillic.css
mkdocs_torillic/partials/: backlink.html  contents_block.html  global_contents.html  local_contents.html
mkdocs_torillic/plugins/: __init__.py  ipa.py
