[project]
name = "mkdocs-torillic"
version = "2.4.0"
authors = [
    {name = "Todd Parsons", email = "todd.e.parsons@gmail.com"}
]
description = "Implementation of the Torillic theme for mkdocs. Convert your markdown TTRPG notes into beautiful HTML!"
readme = "README.md"

[project.urls]
Homepage = "https://TEParsons.github.io/mkdocs-torillic"
Download = "https://github.com/TEParsons/mkdocs-torillic/releases"

[tool.setuptools]
packages = ["mkdocs_torillic"]

[tool.setuptools.package-data]
mkdocs_torillic = ["**/*.html", "**/*.css", "**/*.yml", "**/*.jpg", "**/*.png", "**/*.json", "**/*.ttf"]

[project.entry-points."mkdocs.themes"]
torillic = "mkdocs_torillic"

[project.entry-points."mkdocs.plugins"]
torillic-statblock = "mkdocs_torillic.plugins:TorillicStatblockPlugin"
torillic-ipa = "mkdocs_torillic.plugins:TorillicIPAPlugin"
